# jup-perps-indexer

./: .gitignore  Cargo.toml  README.md  generates-client.ts  package-lock.json  package.json
clients/: generates-client.ts
docs/: instructions.md
idl/: perpetuals.json
rust-client/instructions/: mod.rs
src/: lib.rs  main.rs
src/config/: mod.rs
src/indexer/: parser.rs
src/jup_perps/: mod.rs  programs.rs
src/jup_perps/accounts/: custody.rs  mod.rs  perpetuals.rs  pool.rs  position.rs  position_request.rs  program_accounts.rs  test_oracle.rs
src/jup_perps/errors/: mod.rs  perpetuals.rs
src/jup_perps/instructions/: add_custody.rs  add_liquidity.rs  add_liquidity2.rs  add_pool.rs  close_position_request.rs  create_decrease_position_market_request.rs  create_decrease_position_request.rs  create_decrease_position_request2.rs  create_increase_position_market_request.rs  create_increase_position_request.rs  create_token_metadata.rs  decrease_position2.rs  decrease_position3.rs  decrease_position4.rs  decrease_position_post_swap.rs  get_add_liquidity_amount_and_fee.rs  get_add_liquidity_amount_and_fee2.rs  get_assets_under_management.rs  get_assets_under_management2.rs  get_decrease_position.rs  get_exact_out_swap_amount_and_fees.rs  get_increase_position.rs  get_liquidation_state.rs  get_oracle_price.rs  get_pnl.rs  get_remove_liquidity_amount_and_fee.rs  get_remove_liquidity_amount_and_fee2.rs  get_swap_amount_and_fees.rs  mod.rs  (+27 more)
src/rust_client/: fee_estimation.rs  file.rs  mod.rs  transaction_utils.rs  types.rs
src/websocket/: mod.rs  program_subscribe.rs
(+57 files in other folders)
