[package]
name = "jup-perps-indexer"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-lang = { version = "0.30.0", optional = true }
borsh = "^0.10"
num-derive = "^0.3"
num-traits = "^0.2"
solana-program = "~1.18"
thiserror = "^1.0"
serde = { version = "^1.0", features = ["derive"], optional = true }
serde_with = { version = "^3.0", optional = true }
kaigan = "0.2.5"
